# apt-dater

./: .gitignore  .travis.yml  Makefile.am  configure  configure.ac
conf/: Makefile.am  apt-dater.xml.inc  hosts.xml.inc
etc/: Makefile.am  Makefile.in  apt-dater.xml.in
lib/: Makefile.am
man/: Makefile.am
schema/: Makefile.am
src/: Makefile.am
